--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "smooch-bot-example",
   "version": "1.0.0",
   "description": "Smooch Bot Example Apps",
-  "author": "Andrew Lavers <alavers@system42.net> (http://smooch.io/)",
+  "author": "Huan Vu <hectoronevu@gmail.com> (http://smooch.io/)",
   "scripts": {
     "start": "node heroku"
   },
@@ -13,7 +13,7 @@
     "hbs": "^4.0.0",
     "jsonwebtoken": "^5.7.0",
     "lodash": "^4.6.1",
-    "smooch-bot": "https://github.com/skhavari/smooch-bot.git",
+    "smooch-bot": "https://github.com/hectoronevu/EstherBot.git",
     "smooch-core": "^1.1.1"
   },
   "devDependencies": {
